Restructured the code and the project.

--- a/index.less
+++ b/index.less
@@ -1,1 +1,12 @@
-@import "./styles/base.less";
+
+// Atom Syntax Theme: Ubik Neon
+
+@import (reference) "./styles/syntax-variables";
+
+// @import "./styles/base.less";
+@import "./styles/editor.less";
+@import "./styles/languages.less";
+
+@import './languages/python.less';
+@import './languages/jinja.less';
+@import './languages/ruby.less';
