--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,8 +4,8 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @ubik-syntax;
-@syntax-cursor-color: @cyan;
+@syntax-text-color: @ubik0;
+@syntax-cursor-color: white;
 @syntax-selection-color: @ubik6;
 @syntax-background-color: @very-dark-gray;
 @syntax-cursor-line: @ubik4;
@@ -31,11 +31,22 @@
 @syntax-color-modified: @cyan;
 @syntax-color-removed: @orange;
 
-// Ubik Specific changes:
-@ubik-syntax: @ubik0;
-@ubik-syntax-punctuaction: @base6;
-@ubik-yellow: @ubik2;
-@syntax-variable: @ubik5;
-@syntax-function: @ubik2;
-@syntax-string: @ubik1;
-@syntax-keyword: @ubik3;
+// For language entity colors
+@syntax-color-variable:   @ubik5;
+// @syntax-color-constant:   @;
+// @syntax-color-property:   @;
+// @syntax-color-value:      @;
+@syntax-color-function:   @ubik2;
+@syntax-color-method:     @ubik2;
+@syntax-color-decorator:  @blue;
+@syntax-color-class:      @light-orange;
+@syntax-color-keyword:    @ubik3;
+// @syntax-color-tag:        @;
+// @syntax-color-attribute:  @;
+@syntax-color-import:     @red;
+// @syntax-color-snippet:    @;
+
+// Added
+@syntax-color-comment: @light-gray;
+@syntax-color-string: @ubik1;
+@syntax-color-punctuaction: @base6;
