Added Custom highlighting for Markdown and RestructuredText

--- a/index.less
+++ b/index.less
@@ -10,3 +10,5 @@
 @import './languages/python.less';
 @import './languages/jinja.less';
 @import './languages/ruby.less';
+@import './languages/markdown.less';
+@import './languages/restructuredtext.less';
