--- a/styles/languages.less
+++ b/styles/languages.less
@@ -147,6 +147,12 @@
         }
     }
 
+    &.syntax--type {
+        &.syntax--exception {
+            color: @light-orange;
+        }
+    }
+
     &.syntax--support.syntax--variable.syntax--magic {
         color: @syntax-text-color;
     }
