--- a/styles/languages/markdown.less
+++ b/styles/languages/markdown.less
@@ -11,6 +11,10 @@
         color: @syntax-color-keyword;
         font-weight: bold;
     }
+    &.syntax--heading-4 {
+        color: @syntax-color-keyword;
+        font-weight: bold;
+    }
 
 
     &.syntax--list {
