Changed arguments colors

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -16,7 +16,7 @@
 @very-dark-gray: #0e0e0e;
 
 @cyan: #33859E;
-@blue: #133460;
+@blue: #386fb9;
 @purple: #5b4186;
 @green: #2aa889;
 @red: #c23127;
