--- a/styles/languages/python.less
+++ b/styles/languages/python.less
@@ -17,7 +17,7 @@
     .syntax--variable {
         &.syntax--parameter {
             &.syntax--function {
-                color: @blue
+                color: @syntax-color-function-parameter;
             }
         }
     }
