--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -32,19 +32,20 @@
 @syntax-color-removed: @orange;
 
 // For language entity colors
-@syntax-color-variable:   @ubik5;
-// @syntax-color-constant:   @;
-// @syntax-color-property:   @;
-// @syntax-color-value:      @;
-@syntax-color-function:   @ubik2;
-@syntax-color-method:     @ubik2;
-@syntax-color-decorator:  @blue;
-@syntax-color-class:      @light-orange;
-@syntax-color-keyword:    @ubik3;
-// @syntax-color-tag:        @;
-// @syntax-color-attribute:  @;
-@syntax-color-import:     @red;
-// @syntax-color-snippet:    @;
+@syntax-color-variable:             @ubik5;
+// @syntax-color-constant:          @;
+// @syntax-color-property:          @;
+// @syntax-color-value:             @;
+@syntax-color-function:             @ubik2;
+@syntax-color-method:               @ubik2;
+@syntax-color-decorator:            @ubik3;
+@syntax-color-function-parameter:   @ubik3;
+@syntax-color-class:                @light-orange;
+@syntax-color-keyword:              @blue;
+// @syntax-color-tag:               @;
+// @syntax-color-attribute:         @;
+@syntax-color-import:               @red;
+// @syntax-color-snippet:           @;
 
 // Added
 @syntax-color-comment: @light-gray;
