Add support for Ini, Less, CSS, Yaml + Major Changes
Add support for the following languages:
- Ini
- Yaml
- CSS
- Less

Other changes:
- Renamed the package to hackerman-syntax
- Minor change to the README.md
- Removed unused colors

--- a/index.less
+++ b/index.less
@@ -1,5 +1,4 @@
-
-// Atom Syntax Theme: Ubik Neon
+// Atom Syntax Theme: Hackerman
 
 @import (reference) "./styles/syntax-variables";
 
@@ -8,7 +7,10 @@
 @import "./styles/languages.less";
 
 @import './languages/python.less';
+@import './languages/css.less';
+@import './languages/ini.less';
 @import './languages/jinja.less';
-@import './languages/ruby.less';
 @import './languages/markdown.less';
 @import './languages/restructuredtext.less';
+@import './languages/ruby.less';
+@import './languages/yaml.less';
