--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,36 +1,43 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@base0: #0c1014;
-@base1: #11151c;
-@base2: #091f2e;
-@base3: #0a3749;
-@base4: #245361;
-@base5: #599cab;
-@base6: #99d1ce;
-@base7: #d3ebe9;
+// @base0: #0c1014;
+// @base1: #11151c;
+// @base2: #091f2e;
+// @base3: #0a3749;
+// @base4: #245361;
+// @base5: #599cab;
+// @base7: #d3ebe9;
 
+// Greys
 @very-light-gray: #c5c8c6;
 @light-gray: #969896;
 @gray: #373b41;
 @dark-gray: #0c1014;
 @very-dark-gray: #0e0e0e;
 
-@cyan: #33859E;
+// Colors
+@base6: #99d1ce;
 @blue: #386fb9;
-@purple: #5b4186;
+@cyan: #33859E;
 @green: #2aa889;
-@red: #c23127;
-@orange: #ff5200;
 @light-orange: #ffaa00;
 @magenta: #888ca6;
+@orange: #ff5200;
+@purple: #5b4186;
+// @red: #c23127;
+@red: #ff002e;
+@violet: #6f00ff;
 
-@ubik0: #00C4FF;
-@ubik1: #00b628;
-@ubik2: #fae41f;
-@ubik3: #e000a8;
-// @ubik4: #2e0033;
-// @ubik4: rgba(46, 0, 51, 0.31);
+// Neon
+@neon-green: #00b628;
+@neon-light-blue: #00C4FF;
+@neon-pink: #e000a8;
+@neon-yellow: #fae41f;
+
+// Transparent
 @ubik4: rgba(97, 20, 106, 0.18);
-@ubik5: #6f00ff;
 @ubik6: rgba(11, 110, 191, 0.21);
 @ubik7: rgba(0, 196, 255, 0.42);
+
+// @ubik4: rgba(46, 0, 51, 0.31);
+// @ubik4: #2e0033;
