--- a/styles/editor.less
+++ b/styles/editor.less
@@ -25,7 +25,7 @@ atom-text-editor,atom-text-editor  {
 
     .cursor-line {
         background-color: @syntax-cursor-line;
-        // border-bottom: 1px solid @ubik5
+        // border-bottom: 1px solid @violet
     }
 
     .gutter {
