--- a/styles/languages/jinja.less
+++ b/styles/languages/jinja.less
@@ -8,7 +8,7 @@
 
     .syntax--keyword {
         &.syntax--control {
-            color: @ubik2;
+            color: @neon-yellow;
         }
     }
 
