--- a/styles/languages/markdown.less
+++ b/styles/languages/markdown.less
@@ -15,13 +15,16 @@
         color: @syntax-color-keyword;
         font-weight: bold;
     }
-
+    &.syntax--heading-5 {
+        color: @syntax-color-keyword;
+        font-weight: bold;
+    }
 
     &.syntax--list {
         color: @syntax-color-added;
         &.syntax--unordered {
             &.syntax--task {
-                color: @cyan;
+                color: @orange;
                 &.syntax--completed {
                     color: @blue;
                     font-style: italic;
