--- a/styles/languages/restructuredtext.less
+++ b/styles/languages/restructuredtext.less
@@ -2,7 +2,7 @@
     &.syntax--entity {
         &.syntax--name {
             &.syntax--tag {
-                color: @ubik3;
+                color: @neon-pink;
                 // font-weight: bold;
                 text-decoration: none;
             }
@@ -11,7 +11,7 @@
 
     &.syntax--markup {
         &.syntax--bold {
-            color: @ubik3;
+            color: @neon-pink;
         }
     }
 
