--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,7 +4,7 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @ubik0;
+@syntax-text-color: @neon-light-blue;
 @syntax-cursor-color: white;
 @syntax-selection-color: @ubik6;
 @syntax-background-color: @very-dark-gray;
@@ -20,8 +20,8 @@
 @syntax-result-marker-color-selected: white;
 
 // Gutter colors
-@syntax-gutter-text-color: @ubik0;
-@syntax-gutter-text-color-selected: @ubik3;
+@syntax-gutter-text-color: @neon-light-blue;
+@syntax-gutter-text-color-selected: @neon-pink;
 @syntax-gutter-background-color: @very-dark-gray;
 @syntax-gutter-background-color-selected: @ubik6;
 
@@ -29,25 +29,25 @@
 @syntax-color-renamed: @cyan;
 @syntax-color-added: @green;
 @syntax-color-modified: @cyan;
-@syntax-color-removed: @orange;
+@syntax-color-removed: @red;
 
 // For language entity colors
-@syntax-color-variable:             @ubik5;
-// @syntax-color-constant:          @;
-// @syntax-color-property:          @;
-// @syntax-color-value:             @;
-@syntax-color-function:             @ubik2;
-@syntax-color-method:               @ubik2;
-@syntax-color-decorator:            @ubik3;
-@syntax-color-function-parameter:   @ubik3;
 @syntax-color-class:                @light-orange;
-@syntax-color-keyword:              @blue;
-// @syntax-color-tag:               @;
+@syntax-color-decorator:            @neon-pink;
+@syntax-color-function-parameter:   @neon-pink;
+@syntax-color-function:             @neon-yellow;
+@syntax-color-import:               @orange;
+@syntax-color-keyword:              @neon-pink;
+@syntax-color-method:               @neon-yellow;
+@syntax-color-tag:                  @red;
+@syntax-color-variable:             @neon-light-blue;
 // @syntax-color-attribute:         @;
-@syntax-color-import:               @red;
+// @syntax-color-constant:          @;
+@syntax-color-property:             @neon-pink;
 // @syntax-color-snippet:           @;
-
+// @syntax-color-value:             @;
+@syntax-color-entity: @neon-pink;
 // Added
 @syntax-color-comment: @light-gray;
-@syntax-color-string: @ubik1;
+@syntax-color-string: @neon-green;
 @syntax-color-punctuaction: @base6;
